Close out Module 3 menu management
