# apps/api/src/zod-sample/zod-sample.module.ts
@@ -1,8 +1,0 @@
-import { Module } from "@nestjs/common";
-import { ZodSampleController } from "./zod-sample.controller";
-
-@Module({
-  controllers: [ZodSampleController],
-})
-export class ZodSampleModule {}
-
